# RAG---hybrid-search-with-Chroma-DB-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  architecture.excalidraw  docker-compose.yml  pyproject.toml
.claude/: settings.json
src/a2z_hunter/: api.py  clients.py  config.py  db.py  graph.py  ingest.py  models.py  retriever.py  state.py
src/a2z_hunter/agents/: evidence_fusion.py  response.py  web_search.py
src/a2z_hunter/static/: index.html
src/chroma_rag/: api.py  clients.py  config.py  db.py  graph.py  ingest.py  models.py  rerank.py  retriever.py
src/chroma_rag/agents/: hybrid_retrieval.py  planner.py  query_rewriter.py  reasoning.py  rerank_node.py  verification.py
src/chroma_rag/static/: index.html
tests/: test_db.py  test_routing.py
