[project]
name = "chroma-rag"
version = "0.1.0"
description = "Agentic RAG with hybrid search — LangGraph, Chroma, PostgreSQL, Gemini"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckduckgo-search>=6.3.0",
    "langchain-tavily>=0.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
chroma-rag-ingest = "chroma_rag.ingest:main"
chroma-rag-api = "chroma_rag.api:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chroma_rag = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
